src/types/tests/snapshots/tgbot__types__tests__contact__concat-2.snap
---
source: src/types/tests/contact.rs
expression: "Contact::new(\"John\", \"+79001231212\")"
---
{
  "first_name": "John",
  "phone_number": "+79001231212"
}
