src/types/tests/snapshots/tgbot__types__tests__contact__send_contact-2.snap
---
source: src/types/tests/contact.rs
expression: actual_data
---
{
  "allow_paid_broadcast": true,
  "business_connection_id": "id",
  "callback_query_id": "cqid",
  "chat_id": 1,
  "direct_messages_topic_id": 1,
  "disable_notification": true,
  "first_name": "John",
  "last_name": "Doe",
  "message_effect_id": "effect-id",
  "message_thread_id": 1,
  "phone_number": "+79001231212",
  "protect_content": true,
  "receiver_user_id": 999,
  "reply_markup": {
    "force_reply": true
  },
  "reply_parameters": {
    "message_id": 1
  },
  "suggested_post_parameters": {},
  "vcard": "BEGIN:VCARD\nVERSION:4.0\nFN:John Doe\n\nEND:VCARD"
}
