src/types/tests/snapshots/tgbot__types__tests__contact__send_contact.snap
---
source: src/types/tests/contact.rs
expression: actual_data
---
{
  "chat_id": 1,
  "first_name": "John",
  "phone_number": "+79001231212"
}
